# Energy-Conversion-Simulator

./: .gitignore  CMakeLists.txt  README.md  agents.md
cmake/: BlackHoleModelsConfig.cmake.in
docs/: algebraic_model_guide.md
include/bh/: algebraic_model.hpp  constants.hpp  kerr_geodesic.hpp  plasma_model.hpp  schwarzschild_geodesic.hpp  trajectory.hpp
src/app/: main.cpp
src/integrators/: kerr_geodesic.cpp  schwarzschild_geodesic.cpp
src/physics/: algebraic_model.cpp  plasma_model.cpp
tests/: model_tests.cpp
tests/package_consumer/: CMakeLists.txt  main.cpp
